2011-01-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Make soelim(1) user-configurable.

	* Makefile.am (soelim): Use $(SOELIM).

2010-11-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.7.95

2010-11-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	ci, rcs: Make MSG in ‘-m...MSG’ optional.

	* b-emptylogmessage: New file.
	* Makefile.am (bits): Add b-emptylogmessage.
	* ci.1in: Update ‘-m’; use b-emptylogmessage.
	* rcs.1in: Likewise.

2010-11-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.7.94

2010-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int man] Make dependency specification more idiomatic.

	* Makefile.am (dist_noinst_MANS): New var.
	(BUILT_SOURCES): Add $(dist_noinst_MANS).
	(EXTRA_DIST): Remove rcsfreeze.1, rcsfreeze.1in;
	add ‘$(dist_noinst_MANS:%=%in)’.
	(rcsfile.5): Delete target.
	(.5in.5): New old-fashioned suffix rule.
	(.1in.1): Clear dependency list for old-fashioned suffix rule.
	($(dist_man_MANS), $(dist_noinst_MANS)):
	Specify dependencies of ‘REL’ and ‘$(bits)’.

2010-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.7.93

2010-08-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int man] Fix omission: Specify directory for ‘soelim -I’.

	Regression introduced 2010-05-25,
	"[man] Use soelim(1) for rcsfile.5 generation".
	* Makefile.am (soelim): Say "-I.", not "-I".

2010-06-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Update license to GPLv3+.

	* Makefile.am: Update license notice.

2010-06-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Say "RCS file", not "repository file".

	* b-base (o): Change expansion to "\*r file".
	* ci.1in: Throughout, change "a \*o" to "an \*o".
	* co.1in: Likewise.
	* rcs.1in: Likewise.
	* rcsfile.5in: Likewise.
	* rcsfreeze.1in: Likewise.
	* rcsintro.1in: Likewise.
	* rcsmerge.1in: Likewise.
	* rlog.1in: Likewise.

2010-06-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[man int] Move some common string definitions to b-base.

	* b-base (i, r, u): New ‘.ds’ (string definitions).