@@ -1,3 +1,10 @@
+2011-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[build] Add sanity check for manpage creation.
+
+	* Makefile.am (.5in.5, .1in.1): After doing the
+	action, check that target file exists and is non-empty.
+
 2011-01-07  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[build] Make soelim(1) user-configurable.
